cluster-ip-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["default/ihech-frontend"]'
    management.cattle.io/ui-managed: "true"
  creationTimestamp: "2024-05-24T21:08:30Z"
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/targetWorkloadIds: {}
            f:management.cattle.io/ui-managed: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"4ba03cb5-2d8f-4a5f-b87b-85cd4b3f86e8"}: {}
        f:spec:
          f:internalTrafficPolicy: {}
          f:ports:
            .: {}
            k:{"port":80,"protocol":"TCP"}:
              .: {}
              f:name: {}
              f:port: {}
              f:protocol: {}
              f:targetPort: {}
          f:selector: {}
          f:sessionAffinity: {}
          f:type: {}
      manager: agent
      operation: Update
      time: "2024-05-24T21:08:30Z"
  name: ihech-frontend
  namespace: default
  ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: Deployment
      name: ihech-frontend
      uid: 4ba03cb5-2d8f-4a5f-b87b-85cd4b3f86e8
  resourceVersion: "625396"
  uid: 8b96976d-73d6-4cde-94f2-6b9bbd00fb9d
spec:
  clusterIP: 10.43.110.248
  clusterIPs:
    - 10.43.110.248
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: ihech-frontend
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-default-ihech-frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
