deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ihech-backend
  labels:
    app: ihech-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ihech-backend
  template:
    metadata:
      labels:
        app: ihech-backend
    spec:
      containers:
        - name: ihech-backend
          image: jonasblum/ihech-backend:latest
          ports:
            - containerPort: 5000
          env:
            - name: FLASK_ENV
              value: "production"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 180
            periodSeconds: 180
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 60
