deployment-nodeport-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ihech-backend-nodeport-service
spec:
  selector:
    app: ihech-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
