deployment-nodeport-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ihech-frontend-nodeport-service
spec:
  selector:
    app: ihech-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
