ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.1.222"],"port":80,"protocol":"HTTP","serviceName":"default:ihech-backend","ingressName":"default:ihech-backend","hostname":"backend-ihech.jonas-blum.ch","path":"/","allNodes":false}]
  creationTimestamp: "2024-05-24T21:14:13Z"
  generation: 1
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
      manager: agent
      operation: Update
      time: "2024-05-24T21:14:13Z"
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      subresource: status
      time: "2024-05-24T21:14:13Z"
  name: ihech-backend
  namespace: default
  resourceVersion: "626073"
  uid: 4c9ca1a4-9ec0-4c26-bc39-29f9ca3056e0
spec:
  ingressClassName: traefik
  rules:
    - host: backend-ihech.jonas-blum.ch
      http:
        paths:
          - backend:
              service:
                name: ihech-backend
                port:
                  number: 5000
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.222
