ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.1.222"],"port":80,"protocol":"HTTP","serviceName":"default:ihech-frontend","ingressName":"default:ihech-frontend","hostname":"ihech.jonas-blum.ch","path":"/","allNodes":false}]
  creationTimestamp: "2024-05-24T21:09:12Z"
  generation: 1
  managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
        f:spec:
          f:rules: {}
      manager: agent
      operation: Update
      time: "2024-05-24T21:09:12Z"
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      manager: traefik
      operation: Update
      subresource: status
      time: "2024-05-24T21:09:12Z"
  name: ihech-frontend
  namespace: default
  resourceVersion: "625478"
  uid: 800caf62-676e-4868-87c9-ea619da140bb
spec:
  ingressClassName: traefik
  rules:
    - host: ihech.jonas-blum.ch
      http:
        paths:
          - backend:
              service:
                name: ihech-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.222
